# express

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  TODO.md  changelog.md  express.cabal  haexpress.cabal  stack-lts-11.yaml  stack.yaml
.github/workflows/: build.yml
bench/: compare.hs  compare.txt  exprs.hs  match-list.hs  match-noop.hs  match-noop.txt  match-triexpr.hs  match-triexpr.txt  match.hs  ord.hs  pairs.hs  pairs.txt  sort.hs  sort.txt  tiers-complete.hs  tiers-complete.txt  tiers.hs  tiers.txt  triexpr.hs  versions
bench/runtime/zero/: versions
eg/: u-conjure.hs  u-conjure.txt  u-extrapolate.hs  u-speculate.hs  u-speculate.txt  uextrapolate.hs
mk/: All.hs  Toplibs.hs  depend.mk  haskell.mk
src/Data/: Express.hs  Haexpress.hs
src/Data/Express/: Basic.hs  Canon.hs  Core.hs  Express.hs  Fixtures.hs  Fold.hs  Hole.hs  Instances.hs  Map.hs  Match.hs  Name.hs  Triexpr.hs  Utils.hs
src/Data/Express/Express/: Derive.hs
src/Data/Express/Name/: Derive.hs
src/Data/Express/Utils/: List.hs  String.hs  TH.hs  Typeable.hs
src/Data/Haexpress/: Basic.hs  Canon.hs  Core.hs  Express.hs  Fixtures.hs  Fold.hs  Hole.hs  Instances.hs  Map.hs  Match.hs  Name.hs
src/Data/Haexpress/Express/: Derive.hs
src/Data/Haexpress/Name/: Derive.hs
src/Data/Haexpress/Utils/: List.hs  String.hs  TH.hs  Typeable.hs
test/: Test.hs  basic.hs  canon.hs  core.hs  express-derive.hs  express.hs  fixtures.hs  fold.hs  hole.hs  instances.hs  listable.hs  main.hs  map.hs  match.hs  name-derive.hs  name.hs  ord.hs  show.hs  triexpr.hs  typecheck.hs  utils.hs
test/Test/: ListableExpr.hs
test/model/bench/: compare.out  exprs.out  match-list.out  match-noop.out  match-triexpr.out  match.out  ord.out  pairs.out  sort.out  tiers.out  triexpr.out
test/model/eg/: u-conjure.out  u-extrapolate.out  u-speculate.out  uextrapolate.out
tests/model/bench/: tiers.out
