-- Cabal file for haexpress
name:                haexpress
version:             0.0.0
synopsis:            Haexpress
description:
  Haexpress!

homepage:            https://github.com/rudymatela/leancheck#readme
license:             BSD3
license-file:        LICENSE
author:              Rudy Matela <rudy@matela.com.br>
maintainer:          Rudy Matela <rudy@matela.com.br>
category:            Testing
build-type:          Simple
cabal-version:       1.18

extra-doc-files: README.md
               , TODO.md
extra-source-files: .gitignore
                  , Makefile
                  , mk/depend.mk
                  , mk/haskell.mk
                  , mk/ghcdeps
                  , mk/haddock-i
                  , mk/All.hs
                  , mk/Toplibs.hs
                  , stack.yaml
                  , test/sdist
                  , test/model/bench/*.out
tested-with: GHC==8.4, GHC==8.2, GHC==8.0
           , GHC==7.10, GHC==7.8, GHC==7.6, GHC==7.4


source-repository head
  type:           git
  location:       https://github.com/rudymatela/haexpress

source-repository this
  type:           git
  location:       https://github.com/rudymatela/haexpress
  tag:            v0.0.0

library
  exposed-modules:     Data.Haexpress
                     , Data.Haexpress.Core
                     , Data.Haexpress.Express
                     , Data.Haexpress.Fixtures
                     , Data.Haexpress.Name
                     , Data.Haexpress.Utils.List
                     , Data.Haexpress.Utils.String
                     , Data.Haexpress.Utils.Typeable
  hs-source-dirs:      src
  build-depends:       base >= 4 && < 5
  default-language:    Haskell2010

test-suite main
  type:                exitcode-stdio-1.0
  main-is:             main.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite fixtures
  type:                exitcode-stdio-1.0
  main-is:             fixtures.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite express
  type:                exitcode-stdio-1.0
  main-is:             express.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite listable
  type:                exitcode-stdio-1.0
  main-is:             listable.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite name
  type:                exitcode-stdio-1.0
  main-is:             name.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite utils
  type:                exitcode-stdio-1.0
  main-is:             utils.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

benchmark tiers
  type:                exitcode-stdio-1.0
  main-is:             tiers.hs
  hs-source-dirs:      bench, test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010
