-- Cabal file for haexpress
name:                haexpress
version:             0.0.2
synopsis:            Haexpress
description:
  Haexpress!

homepage:            https://github.com/rudymatela/haexpress#readme
license:             BSD3
license-file:        LICENSE
author:              Rudy Matela <rudy@matela.com.br>
maintainer:          Rudy Matela <rudy@matela.com.br>
category:            Testing
build-type:          Simple
cabal-version:       1.18

extra-doc-files: README.md
               , TODO.md
extra-source-files: .gitignore
                  , Makefile
                  , mk/depend.mk
                  , mk/haskell.mk
                  , mk/ghcdeps
                  , mk/haddock-i
                  , mk/All.hs
                  , mk/Toplibs.hs
                  , stack.yaml
                  , test/sdist
                  , test/model/bench/*.out
                  , bench/versions
                  , bench/runtime/zero/versions
                  , bench/runtime/zero/bench/*.runtime
tested-with: GHC==8.4, GHC==8.2, GHC==8.0
           , GHC==7.10, GHC==7.8, GHC==7.6, GHC==7.4


source-repository head
  type:           git
  location:       https://github.com/rudymatela/haexpress

source-repository this
  type:           git
  location:       https://github.com/rudymatela/haexpress
  tag:            v0.0.2

library
  exposed-modules:     Data.Haexpress
                     , Data.Haexpress.Core
                     , Data.Haexpress.Basic
                     , Data.Haexpress.Map
                     , Data.Haexpress.Express
                     , Data.Haexpress.Express.Derive
                     , Data.Haexpress.Fixtures
                     , Data.Haexpress.Fold
                     , Data.Haexpress.Hole
                     , Data.Haexpress.Instances
                     , Data.Haexpress.Name
                     , Data.Haexpress.Name.Derive
                     , Data.Haexpress.Canon
                     , Data.Haexpress.Match
                     , Data.Haexpress.Utils.List
                     , Data.Haexpress.Utils.String
                     , Data.Haexpress.Utils.Typeable
                     , Data.Haexpress.Utils.TH
  hs-source-dirs:      src
  build-depends:       base >= 4 && < 5, template-haskell
  default-language:    Haskell2010

test-suite main
  type:                exitcode-stdio-1.0
  main-is:             main.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite core
  type:                exitcode-stdio-1.0
  main-is:             core.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite canon
  type:                exitcode-stdio-1.0
  main-is:             canon.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite hole
  type:                exitcode-stdio-1.0
  main-is:             hole.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite match
  type:                exitcode-stdio-1.0
  main-is:             match.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite map
  type:                exitcode-stdio-1.0
  main-is:             map.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite fixtures
  type:                exitcode-stdio-1.0
  main-is:             fixtures.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite instances
  type:                exitcode-stdio-1.0
  main-is:             instances.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite express
  type:                exitcode-stdio-1.0
  main-is:             express.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite express-derive
  type:                exitcode-stdio-1.0
  main-is:             express-derive.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite ord
  type:                exitcode-stdio-1.0
  main-is:             ord.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite listable
  type:                exitcode-stdio-1.0
  main-is:             listable.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite name
  type:                exitcode-stdio-1.0
  main-is:             name.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite name-derive
  type:                exitcode-stdio-1.0
  main-is:             name-derive.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite fold
  type:                exitcode-stdio-1.0
  main-is:             fold.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite show
  type:                exitcode-stdio-1.0
  main-is:             show.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

test-suite utils
  type:                exitcode-stdio-1.0
  main-is:             utils.hs
  hs-source-dirs:      test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

benchmark compare
  type:                exitcode-stdio-1.0
  main-is:             compare.hs
  hs-source-dirs:      bench, test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

benchmark pairs
  type:                exitcode-stdio-1.0
  main-is:             pairs.hs
  hs-source-dirs:      bench, test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010

benchmark tiers
  type:                exitcode-stdio-1.0
  main-is:             tiers.hs
  hs-source-dirs:      bench, test
  other-modules:       Test, Test.ListableExpr
  build-depends:       base >= 4 && < 5, haexpress, leancheck
  default-language:    Haskell2010
